--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.35MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇹🇭 泰国-307.4KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇰🇷 韩国-2.63MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.89MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇺🇸 美国-344.4KB/s(Youtube:不良林), server: su4.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su4.chaoxn.top}}
-  - {name: 🇸🇬 新加坡-436.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.14MB/s(Youtube:不良林), server: 104.243.25.95, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇨🇳 中国-494.2KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-701.7KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇬🇧 英国-3.15MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.06MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇳🇱 荷兰-525.1KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.63MB/s(Youtube:不良林), server: xmrs013.xmrth-node.xyz, port: 15885, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrs013.xmrth-node.xyz}}
+  - {name: 🇨🇳 中国-2.61MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-307.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-307.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-307.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-307.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-307.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-307.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-307.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
