--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇰🇷 韩国-2.63MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.14MB/s(Youtube:不良林), server: 104.243.25.95, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇨🇳 中国-494.2KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-701.7KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇬🇧 英国-3.15MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.06MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇳🇱 荷兰-525.1KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.63MB/s(Youtube:不良林), server: xmrs013.xmrth-node.xyz, port: 15885, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrs013.xmrth-node.xyz}}
-  - {name: 🇨🇳 中国-2.61MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇹🇭 泰国-2.07MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-4.39MB/s(Youtube:不良林), server: 152.67.218.38, port: 443, type: vmess, uuid: b5e9480a-b7aa-40a4-f9a7-5299b5e363b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.67.218.38}}
+  - {name: 🇺🇸 美国-4.94MB/s(Youtube:不良林), server: su11.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su11.chaoxn.top}}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.15MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-701.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-525.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
