--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-436.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇰🇷 韩国-4.39MB/s(Youtube:不良林), server: 152.67.218.38, port: 443, type: vmess, uuid: b5e9480a-b7aa-40a4-f9a7-5299b5e363b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.67.218.38}}
-  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-430.9KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活1天)香港-4.09MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
   - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.15MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.44MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.94MB/s(Youtube:不良林), server: su11.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su11.chaoxn.top}}
+  - {name: 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇯🇵 日本-7.17MB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇭 瑞士-336.3KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: 8087b6af-8b74-3097-9ec6-f688da88073e, sni: ch1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇺🇸 美国-4.30MB/s(Youtube:不良林), server: 129.146.249.251, port: 16777, type: vmess, uuid: 937b4b10-0b6c-4dad-d3a4-2d6071f03fa3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-430.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-430.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-430.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-4.09MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-430.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-430.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-430.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-436.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇬🇧 英国-430.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-996.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-336.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
